--- a/BreakTimeAlarm/app/build.gradle
+++ b/BreakTimeAlarm/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
     implementation "androidx.work:work-runtime-ktx:$work_version"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
 }
